--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "remotion": "4.0.414"
+    "remotion": "4.0.414",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@remotion/cli": "4.0.414",
